exports[`Add pages allows you to add multiple pages 1`] = `
Object {
  "pages": Array [
    Object {
      "component": "/whatever/index.js",
      "componentChunkName": "page-component---whatever-index-js",
      "path": "/hi/",
    },
    Object {
      "component": "/whatever/index.js",
      "componentChunkName": "page-component---whatever-index-js",
      "path": "/hi/pizza/",
    },
  ],
}
`;

exports[`Add pages allows you to add pages 1`] = `
Object {
  "payload": Object {
    "component": "/whatever/index.js",
    "componentChunkName": "page-component---whatever-index-js",
    "path": "/hi/",
  },
  "type": "UPSERT_PAGE",
}
`;

exports[`Add pages allows you to add pages 2`] = `
Object {
  "pages": Array [
    Object {
      "component": "/whatever/index.js",
      "componentChunkName": "page-component---whatever-index-js",
      "path": "/hi/",
    },
  ],
}
`;

exports[`Add pages allows you to add pages with context 1`] = `
Object {
  "payload": Object {
    "component": "/whatever/index.js",
    "componentChunkName": "page-component---whatever-index-js",
    "context": Object {
      "id": 123,
    },
    "path": "/hi/",
  },
  "type": "UPSERT_PAGE",
}
`;

exports[`Add pages allows you to add pages with context 2`] = `
Object {
  "pages": Array [
    Object {
      "component": "/whatever/index.js",
      "componentChunkName": "page-component---whatever-index-js",
      "context": Object {
        "id": 123,
      },
      "path": "/hi/",
    },
  ],
}
`;

exports[`Add pages allows you to update existing pages (based on path) 1`] = `
Object {
  "pages": Array [
    Object {
      "component": "/whatever2/index.js",
      "componentChunkName": "page-component---whatever-2-index-js",
      "path": "/hi/",
    },
  ],
}
`;
